--- a/public/index.css
+++ b/public/index.css
@@ -107,6 +107,7 @@ footer {
     display : flex;
     align-items: center;
     justify-content:center;
+    text-decoration:none;
  }
 
 .last_section {
